Add diagnostic JVM flags to dev profile